--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
       <section class="registry-info">
         <h2 class="doc-title">YER UCHASTKASINING KADASTR PASPORTI</h2>
         <p class="doc-date">Sana: 06.05.2025 </p>
-        <p class="doc-number">1730206/Y-24001006</p>
+        <p class="doc-number">1730206/Y-24001009</p>
       
         <!-- 1. Ko‘chmas mulk obyekti haqida -->
         <div class="info-block">
           <h3>1. Ko‘chmas mulk obyekti:</h3>
           <table>
-            <tr><th>Kadastr raqami</th><td>15:08:000014393</td></tr>
+            <tr><th>Kadastr raqami</th><td>15:08:000014396
+            </td></tr>
             <tr><th>Manzil</th><td>Farg‘ona viloyati , Qo‘shtepa tumani</td></tr>
           </table>
         </div>  
@@ -100,7 +101,7 @@
              
             </tr>
             <tr>
-              <td>0.30</td>
+              <td>0.35</td>
             </tr>
           </table>
         </div>
